--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "@types/react": "18.0.3",
         "@types/react-dom": "18.0.0",
         "@vitejs/plugin-react-refresh": "1.3.6",
-     
         "axios": "0.26.1",
         "cross-fetch": "3.1.5",
         "env-cmd": "10.1.0",
@@ -27,6 +26,7 @@
         "js-cookie": "3.0.1",
         "jwt-decode": "3.1.2",
         "lottie-web": "5.9.2",
+        "mobx": "6.5.0",
         "moment": "2.29.2",
         "react": "18.0.0",
         "react-cookie": "4.1.1",
