--- a/environments/.dev.env
+++ b/environments/.dev.env
@@ -1,3 +1,3 @@
 VITE_API_END_POINT=https://integration.weavit.ai/graphql
-VITE_WEAVIT_APP_LOGIN=http://localhost:3001
+VITE_WEAVIT_APP_LOGIN=http://192.168.1.38:3000
 VITE_WEAVIT_COOKIE_DOMAIN=localhost
