--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/react-dom": "18.0.0",
         "@vitejs/plugin-react-refresh": "1.3.6",
         "axios": "0.26.1",
+        "cheerio": "1.0.0-rc.10",
         "cross-fetch": "3.1.5",
         "env-cmd": "10.1.0",
         "flat": "5.0.2",
@@ -25,6 +26,7 @@
         "i18next-browser-languagedetector": "6.1.4",
         "js-cookie": "3.0.1",
         "jwt-decode": "3.1.2",
+        "lodash": "4.17.21",
         "lottie-web": "5.9.2",
         "mobx": "6.5.0",
         "moment": "2.29.2",
