--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-native-web-linear-gradient": "1.1.2",
         "react-native-web-lottie": "1.4.4",
         "react-router-dom": "6.3.0",
+        "react-string-replace": "1.1.0",
         "sass": "1.50.0",
         "styled-components": "5.3.5",
         "typescript": "4.6.3",
