--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@testing-library/user-event": "14.1.0",
         "@types/jest": "27.4.1",
         "@types/react": "18.0.3",
+        "@types/react-beautiful-dnd": "13.1.2",
         "@types/react-dom": "18.0.0",
         "@vitejs/plugin-react-refresh": "1.3.6",
         "axios": "0.26.1",
@@ -31,6 +32,7 @@
         "mobx": "6.5.0",
         "moment": "2.29.2",
         "react": "18.0.0",
+        "react-beautiful-dnd": "13.1.0",
         "react-cookie": "4.1.1",
         "react-dom": "18.0.0",
         "react-hook-form": "7.29.0",
